<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_monitor"
        android:icon="@drawable/ic_monitor_24"
        android:title="@string/title_monitor" />

    <item
        android:id="@+id/navigation_manage"
        android:icon="@drawable/ic_manage_24"
        android:title="@string/title_manage" />

    <item
        android:id="@+id/navigation_tasks"
        android:icon="@drawable/ic_tasks_24"
        android:title="@string/title_tasks" />
</menu>